force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/PJN_Contact_Point_Type_Consent__c.object-meta.xml
<CustomObject>
    <description>Contact Point Type Consent custom object.</description>
    <label>Consent</label>
    <nameField>
        <displayFormat>CPTC-{0000000}</displayFormat>
        <label>Consent Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>