force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/Data_Use_Purpose_Program_DeveloperNa_MVN__c.field-meta.xml
<CustomField>
    <fullName>Data_Use_Purpose_Program_DeveloperNa_MVN__c</fullName>
    <description>Contains the developer name of the associated data use purpose&apos;s care plan.  Used for validation rules, etc.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Use Purpose Program DeveloperName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>