force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/MVN_Days_from_Enrollment_to_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_Days_from_Enrollment_to_Consent__c</fullName>
    <formula>DATEVALUE(CreatedDate) -(PJN_Care_Plan__r.MVN_Start_Form_Received_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Enrollment to Consent Capture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>