force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/MVN_Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>MVN_Voice_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used to store the location of the Voice Call record which contains the Verbal SMS consent conversation. Populated via &quot;Create Consent&quot; screen flow.</description>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>Consents</relationshipName>
    <type>Lookup</type>
</CustomField>