force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Capture_Contact_Point_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Capture_Contact_Point_Type__c</fullName>
    <description>Custom field for the contact point used to capture consent.</description>
    <label>Capture Contact Point Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mailing Address</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>