force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Capture_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Capture_Date__c</fullName>
    <description>The date consent has been captured on.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Capture Date</label>
    <type>DateTime</type>
</CustomField>