force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Capture_Source__c.field-meta.xml
<CustomField>
    <fullName>PJN_Capture_Source__c</fullName>
    <description>The way you captured consent. For example, enrollment form or via phone.</description>
    <label>Capture Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enrollment Form</fullName>
            </value>
            <value>
                <fullName>eSignature</fullName>
            </value>
            <value>
                <fullName>myRARE</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>