force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Capture_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Capture_Source_Type__c</fullName>
    <description>Converts the Capture Source field value into either Written or Verbal.</description>
    <formula>CASE(PJN_Capture_Source__c,
&quot;Enrollment Form&quot;, &quot;Written&quot;,
&quot;Letter&quot;, &quot;Written&quot;,
&quot;eSignature&quot;, &quot;Written&quot;,
&quot;Phone&quot;, &quot;Verbal&quot;,
&quot;MyRARE&quot;, &quot;Written&quot;,
&quot;Verbal&quot;, &quot;Verbal&quot;,
NULL)</formula>
    <label>Capture Source Type</label>
    <type>Text</type>
</CustomField>