force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan__c</fullName>
    <description>Master-detail (Case) to care plan.</description>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Consents</relationshipLabel>
    <relationshipName>PJN_Contact_Point_Type_Consent</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>