force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Care_Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan_Number__c</fullName>
    <description>Returns the Case Number of the record&apos;s parent Care Plan.</description>
    <formula>PJN_Care_Plan__r.CaseNumber</formula>
    <label>Care Plan Number</label>
    <type>Text</type>
</CustomField>