force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Consent_Status__c</fullName>
    <description>Displays an indicator icon based on the consent status and type.</description>
    <formula>IF(
TEXT( PJN_Privacy_Consent_Status__c ) == &quot;Opt In&quot; &amp;&amp; PJN_Effective_To__c &gt;= TODAY(),
IMAGE(&quot;/resource/PJNImages/OptIn.png&quot;,&quot;Opt In&quot;, 33, 115),
IF(
TEXT( PJN_Privacy_Consent_Status__c ) == &quot;Opt Out&quot; || PJN_Effective_To__c &lt; TODAY(),
IMAGE(&quot;/resource/PJNImages/OptOut.png&quot;,&quot;Opt Out&quot;, 33, 115),
IF(
TEXT( PJN_Privacy_Consent_Status__c ) == &quot;Not Given&quot;,
IMAGE(&quot;/resource/PJNImages/NotGiven.png&quot;,&quot;Not Given&quot;, 33, 115),
NULL
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent Status</label>
    <type>Text</type>
</CustomField>