force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Contact_Point_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Contact_Point_Type__c</fullName>
    <description>The contact method you want to apply consent to.</description>
    <label>Contact Point Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mailing Address</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>