force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Creation_UUID__c.field-meta.xml
<CustomField>
    <fullName>PJN_Creation_UUID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Creation UUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>