force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Data_Use_Purpose__c.field-meta.xml
<CustomField>
    <fullName>PJN_Data_Use_Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup(Data Use Purpose).</description>
    <label>Data Use Purpose</label>
    <referenceTo>DataUsePurpose</referenceTo>
    <relationshipName>PJN_Contact_Point_Type_Consent</relationshipName>
    <type>Lookup</type>
</CustomField>