force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Data_Use_Purpose_Formula__c.field-meta.xml
<CustomField>
    <fullName>PJN_Data_Use_Purpose_Formula__c</fullName>
    <description>Returns the name of the data use purpose for which consent was recorded.</description>
    <formula>PJN_Data_Use_Purpose__r.Name</formula>
    <label>Data Use Purpose</label>
    <type>Text</type>
</CustomField>