force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>PJN_Effective_From__c</fullName>
    <description>Date/time consent is effective from.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>