force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Effective_To__c.field-meta.xml
<CustomField>
    <fullName>PJN_Effective_To__c</fullName>
    <description>Date/Time consent is effective to.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>