force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Party__c.field-meta.xml
<CustomField>
    <fullName>PJN_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The record based on the Individual object you want to associate consent with.</description>
    <label>Party</label>
    <referenceTo>Individual</referenceTo>
    <relationshipName>PJN_Contact_Point_Type_Consent</relationshipName>
    <type>Lookup</type>
</CustomField>