force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Patient__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient related to the consent record.</description>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Program Participant</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Libtayo Marketing Program Participant</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consents (Patient)</relationshipLabel>
    <relationshipName>PatientConsents</relationshipName>
    <type>Lookup</type>
</CustomField>