force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/fields/PJN_Privacy_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Privacy_Consent_Status__c</fullName>
    <description>Whether the individual associated with this record agrees to this form of contact.</description>
    <label>Privacy Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Not Given</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>