force-app/main/default/src/objects/PJN_Contact_Point_Type_Consent__c/validationRules/DUP_Prog_Must_Equal_Care_Plan_Prog_MVN.validationRule-meta.xml
<ValidationRule>
    <fullName>DUP_Prog_Must_Equal_Care_Plan_Prog_MVN</fullName>
    <active>false</active>
    <description>Ensure that the associated Data Use Purpose&apos;s program is the same as the associated care plan&apos;s program.  This rule assumes that the DUP&apos;s external ID is the same as the DUP&apos;s associated care plan&apos;s external ID.</description>
    <errorConditionFormula>Data_Use_Purpose_Program_DeveloperNa_MVN__c !=  PJN_Care_Plan__r.PJN_Program__r.PJN_Program_DeveloperName__c</errorConditionFormula>
    <errorMessage>Consent&apos;s data use purpose must belong to the same program as the care plan&apos;s program.</errorMessage>
</ValidationRule>